--- a/finalizar.css
+++ b/finalizar.css
@@ -234,7 +234,7 @@ h2 {
     background-color: #0056b3;
 }
 
-#cancelar_button{
+#cancelarCompraBtn{
     background-color: #ff0000;
     color:white;
     width: 100%;
@@ -247,7 +247,7 @@ h2 {
     transition: background-color 0.3s ease;
 }
 
-#cancelar_button:hover {
+#cancelarCompraBtn:hover {
     background-color: #a50000;
 }
 
@@ -826,7 +826,7 @@ h2 {
         background-color: #0056b3;
     }
     
-    #cancelar_button{
+    #cancelarCompraBtn{
         background-color: #ff0000;
         color:white;
         width: 100%;
@@ -839,7 +839,7 @@ h2 {
         transition: background-color 0.3s ease;
     }
     
-    #cancelar_button:hover {
+    #cancelarCompraBtn:hover {
         background-color: #a50000;
     }
     
